wrapper/ggems.py


        ggems_lib.initialize_phantom_creator_manager.argtypes = [
            ctypes.c_void_p]
        ggems_lib.initialize_phantom_creator_manager.restype = ctypes.c_void_p

        ggems_lib.write_phantom_creator_manager.argtypes = [ctypes.c_void_p]
        ggems_lib.write_phantom_creator_manager.restype = ctypes.c_void_p

        ggems_lib.set_isocenter_positions.argtypes = [
            ctypes.c_void_p, ctypes.c_double, ctypes.c_double, ctypes.c_double]
        ggems_lib.set_isocenter_positions.restype = ctypes.c_void_p

        self.obj = ggems_lib.get_instance_phantom_creator_manager()

    def set_dimensions(self, width, height, depth):
        ggems_lib.set_phantom_dimension_phantom_creator_manager(
            self.obj, width, height, depth)

    def set_element_sizes(self, width, height, depth):
        ggems_lib.set_element_sizes_phantom_creator_manager(
            self.obj, width, height, depth)

    def set_output(self, output, format):
        ggems_lib.set_output_basename_phantom_creator_manager(
            self.obj, output, format)

    def initialize(self):
        ggems_lib.initialize_phantom_creator_manager(self.obj)

    def write(self):
        ggems_lib.write_phantom_creator_manager(self.obj)

    def set_isocenter_positions(self, iso_pos_x, iso_pos_y, iso_pos_z):
        ggems_lib.set_isocenter_positions(
            self.obj, iso_pos_x, iso_pos_y, iso_pos_z)


class GGEMSTube(object):
    """Build a solid tube analytical phantom
    """
    def __init__(self):
        ggems_lib.create_tube.restype = ctypes.c_void_p

        ggems_lib.delete_tube.argtypes = [ctypes.c_void_p]
        ggems_lib.delete_tube.restype = ctypes.c_void_p

        ggems_lib.set_height_tube.argtypes = [ctypes.c_void_p, ctypes.c_double]
        ggems_lib.set_height_tube.restype = ctypes.c_void_p

        ggems_lib.set_radius_tube.argtypes = [ctypes.c_void_p, ctypes.c_double]
        ggems_lib.set_radius_tube.restype = ctypes.c_void_p

        ggems_lib.set_position_tube.argtypes = [
            ctypes.c_void_p, ctypes.c_double, ctypes.c_double, ctypes.c_double]
        ggems_lib.set_position_tube.restype = ctypes.c_void_p

        ggems_lib.set_label_value_tube.argtypes = [
            ctypes.c_void_p, ctypes.c_float]
        ggems_lib.set_label_value_tube.restype = ctypes.c_void_p

        ggems_lib.initialize_tube.argtypes = [ctypes.c_void_p]
        ggems_lib.initialize_tube.restype = ctypes.c_void_p

        ggems_lib.draw_tube.argtypes = [ctypes.c_void_p]
        ggems_lib.draw_tube.restype = ctypes.c_void_p

        self.obj = ggems_lib.create_tube()

    def delete(self):
        ggems_lib.delete_tube(self.obj)

    def set_height(self, height):
        ggems_lib.set_height_tube(self.obj, height)

    def set_radius(self, radius):
        ggems_lib.set_radius_tube(self.obj, radius)

    def set_label_value(self, label_value):
        ggems_lib.set_label_value_tube(self.obj, label_value)

    def set_position(self, pos_x, pos_y, pos_z):
        ggems_lib.set_position_tube(self.obj, pos_x, pos_y, pos_z)

    def initialize(self):
        ggems_lib.initialize_tube(self.obj)

    def draw(self):
        ggems_lib.draw_tube(self.obj)
